--- a/newtest1.css
+++ b/newtest1.css
@@ -7,10 +7,11 @@ input[type=checkbox]
   -o-transform: scale(2); /* Opera */
   transform: scale(2);
   padding: 10px;
-  /*width:30px; */
+  width:30px;
 }
 
 div {
     display:block;
     padding-bottom: 10px;
+    padding-left:10px;
 }
